<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="90dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profilepicture"
            android:src="@drawable/myphoto" />
    </FrameLayout>


    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/keenan_wannop"
        style="@style/name"
        />

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/atlanta_ga"
        style="@style/location" />

    <TextView
        android:id="@+id/Education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/university_at_buffalo_b_s_in_computer_science"
        style="@style/education" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Hobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textColor="@android:color/darker_gray"
            android:textSize="20pt" />

        <TextView
            android:id="@+id/hockey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hockey"
            style="@style/hobbies"/>

        <TextView
            android:id="@+id/basketball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basketball"
            style="@style/hobbies"/>

        <TextView
            android:id="@+id/video_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_games"
            style="@style/hobbies"/>

    </TableLayout>
</LinearLayout>
